--- a/web/package.json
+++ b/web/package.json
@@ -20,11 +20,13 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.8.4",
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.0",
+    "formidable": "^3.5.2",
     "helmet": "^7.1.0",
     "highlight.js": "^11.9.0",
     "jwks-rsa": "^3.1.0",
