--- a/web/package.json
+++ b/web/package.json
@@ -3,23 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"next dev\" \"node api-server\"",
-    "dev:api": "nodemon api-server",
+    "dev": "next dev",
     "build": "next build",
-    "start": "concurrently \"next start\" \"node api-server\"",
-    "start:api": "node api-server",
-    "test": "vitest run",
-    "test:watch": "vitest watch",
-    "test:integration": "start-server-and-test start http-get://localhost:3000 cypress:run",
-    "test:integration:watch": "start-server-and-test start http-get://localhost:3000 cypress:open",
-    "cypress:run": "cypress run --browser chrome",
-    "cypress:open": "cypress open --browser chrome"
+    "start": "next start"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^4.2.1",
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.8.4",
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
@@ -39,9 +28,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
+    "@tailwindcss/postcss": "^4.0.17",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@types/eslint": "^8.56.10",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "@vitejs/plugin-react": "^4.3.4",
     "babel-jest": "^29.7.0",
     "cypress": "^12.7.0",
@@ -49,8 +45,11 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.5.3",
     "prettier": "^3.1.0",
     "start-server-and-test": "^2.0.0",
+    "tailwindcss": "^4.0.17",
+    "typescript": "^5.5.3",
     "vitest": "^3.0.9"
   }
 }
