--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^4.2.1",
+    "@google/generative-ai": "^0.24.0",
     "axios": "^1.8.4",
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
@@ -16,6 +17,7 @@
     "express": "^4.18.2",
     "express-jwt": "^8.0",
     "formidable": "^3.5.2",
+    "framer-motion": "^12.6.2",
     "helmet": "^7.1.0",
     "highlight.js": "^11.9.0",
     "jwks-rsa": "^3.1.0",
